# binary_logger

./: .gitignore  CMakeLists.txt  README.md  binary_logger_plugins.xml  package.xml
cfg/: binary_logger_cfg.yaml
doc/: binary_logger_in_brief.txt
include/binary_logger/: float64_logger.h  float64_multiarray_logger.h  imu_logger.h  joint_state_logger.h  pose_stamped_logger.h  tf_logger.h  twist_stamped_logger.h  wrench_stamped_logger.h
launch/: automatic_binary_logger.launch  binary_logger.launch
scripts/: README.md  bin_convert.m  bin_resampling.m  findLoggedData.m
src/: automatic_logger_node.cpp  logger_start_node.cpp
src/binary_logger/: float64_logger.cpp  float64_multiarray_logger.cpp  imu_logger.cpp  joint_state_logger.cpp  pose_stamped_logger.cpp  tf_logger.cpp  twist_stamped_logger.cpp  wrench_stamped_logger.cpp
